Infra/K8S/auction-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-service
spec:
  selector:
    matchLabels:
      app: auction-service
  template:
    metadata:
      labels:
        app: auction-service
    spec:
      containers:
        - name: auction-service
          image: qassimov/auction-service
          imagePullPolicy: Always
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  name: auction-clusterip
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 80
      name: web
    - port: 7777
      targetPort: 7777
      name: grpc
