Infra/K8S/bid-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bid-service
spec:
  selector:
    matchLabels:
      app: bid-service
  template:
    metadata:
      labels:
        app: bid-service
    spec:
      containers:
      - name: bid-service
        image: qassimov/bid-service
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: bid-clusterip
spec:
  type: ClusterIP
  selector:
    app: bid-service
  ports:
  - port: 80
    targetPort: 80
