Infra/K8S/identity-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
spec:
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
        - name: identity-service
          image: qassimov/identity-service
          imagePullPolicy: Always
          resources:
            limits:
              memory: '128Mi'
              cpu: '100m'
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /app/share
              name: identityshare
      volumes:
        - name: identityshare
          persistentVolumeClaim:
            claimName: identity-claim
---
apiVersion: v1
kind: Service
metadata:
  name: identity-clusterip
spec:
  type: ClusterIP
  selector:
    app: identity-service
  ports:
    - port: 80
      targetPort: 80
