Infra/K8S/notify-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-service
spec:
  selector:
    matchLabels:
      app: notify-service
  template:
    metadata:
      labels:
        app: notify-service
    spec:
      containers:
        - name: notify-service
          image: qassimov/notify-service
          imagePullPolicy: Always
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  name: notify-clusterip
spec:
  type: ClusterIP
  selector:
    app: notify-service
  ports:
    - port: 80
      targetPort: 80
