Infra/K8S/rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'
          ports:
            - containerPort: 15672
              name: rbmq-mgmt-port
            - containerPort: 5672
              name: rbmq-msg-port
          volumeMounts:
            - mountPath: /var/data/rabbit
              name: rabbitdata
      volumes:
        - name: rabbitdata
          persistentVolumeClaim:
            claimName: rabbit-claim

---
apiVersion: v1
kind: Service
metadata:
  name: rabbit-clusterip
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
