Infra/K8S/search-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-service
spec:
  selector:
    matchLabels:
      app: search-service
  template:
    metadata:
      labels:
        app: search-service
    spec:
      containers:
        - name: search-service
          image: qassimov/search-service
          imagePullPolicy: Always
          resources:
            limits:
              memory: '128Mi'
              cpu: '100m'
---
apiVersion: v1
kind: Service
metadata:
  name: search-clusterip
spec:
  type: ClusterIP
  selector:
    app: search-service
  ports:
    - port: 80
      targetPort: 80
